# prism

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  INDEX.md  README.md  TODO.md  mypy.ini  pyrightconfig.json  requirements-prism-cli.txt  requirements-prism-core.txt
docs/superpowers/plans/: 2026-05-19-test-coverage.md
docs/superpowers/specs/: 2026-05-19-test-coverage-design.md
documentation/ai-sessions/: 20260510 -- ses_1eeb -- First explorer session.md  20260511 -- ses_1ea6 -- Apply first spec.md
openspec/changes/archive/2026-05-11-add-prism-tutor/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-11-add-repl-mode/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-11-prism-core/: design.md  tasks.md
openspec/changes/archive/2026-05-12-add-path-tags/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-14-cli-repl-command-extraction/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-14-improve-agent-compatibility/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-14-improve-test-coverage/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-14-improve-test-coverage-2/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-14-python-toolchain-setup/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-14-refactor-node-manager/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-14-tag-management-commands/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-16-node-description/: design.md  proposal.md  tasks.md
openspec/changes/prism-core/: design.md  proposal.md  tasks.md
openspec/changes/prism-core/specs/blob-storage/: spec.md
openspec/changes/prism-core/specs/change-tracking/: spec.md
openspec/changes/prism-core/specs/metadata-graph/: spec.md
openspec/changes/prism-core/specs/node-management/: spec.md
openspec/changes/prism-core/specs/query-search/: spec.md
openspec/changes/prism-core/specs/type-system/: spec.md
openspec/changes/prism-core/specs/vault-lifecycle/: spec.md
openspec/changes/setup-pre-commit/: README.md  design.md  proposal.md  tasks.md
openspec/changes/setup-pre-commit/specs/pre-commit-integration/: spec.md
openspec/changes/tui-application/: design.md  graph-tab-full-titles-design.md  graph-tab-full-titles-plan.md  proposal.md  tasks.md  test-coverage-design.md  test-coverage-plan.md  tui-fixes-design.md  tui-fixes-round2-design.md  tui-fixes-round2-plan.md  tui-fixes-round3-design.md  tui-fixes-round3-plan.md  tui-startup-completion-design.md  tui-startup-completion-tasks.md
openspec/changes/tui-application/specs/command-core/: spec.md
openspec/changes/tui-application/specs/tui-column-browser/: spec.md
openspec/changes/tui-application/specs/tui-graph-view/: spec.md
openspec/changes/tui-application/specs/tui-query-builder/: spec.md
openspec/changes/tui-application/specs/tui-shell/: spec.md
openspec/changes/tui-application/specs/tui-tag-cloud/: spec.md
openspec/specs/agent-documentation/: spec.md
openspec/specs/blob-storage/: spec.md
openspec/specs/change-tracking/: spec.md
openspec/specs/command-core/: spec.md
openspec/specs/dependency-auditing/: spec.md
openspec/specs/metadata-graph/: spec.md
openspec/specs/onboarding/: spec.md
openspec/specs/path-tags/: spec.md
openspec/specs/query-search/: spec.md
openspec/specs/repl-interface/: spec.md
openspec/specs/tag-management/: spec.md
openspec/specs/testing/: spec.md
openspec/specs/type-checking/: spec.md
openspec/specs/type-system/: spec.md
openspec/specs/vault-lifecycle/: spec.md
prism-cli/: AGENTS.md  pyproject.toml
prism-cli/prism_cli/: __init__.py  commands.py  completions.py  main.py  repl.py  tutor.py
prism-cli/tests/: test_commands.py  test_completions.py  test_main.py  test_repl.py  test_tutor.py
prism-core/: AGENTS.md  pyproject.toml
prism-core/prism/: __init__.py  tracking.py
prism-core/prism/graph/: __init__.py  links.py
prism-core/prism/node/: __init__.py  manager.py  metadata.py  storage.py
prism-core/prism/path/: __init__.py  resolver.py
prism-core/prism/query/: __init__.py  engine.py  parser.py
prism-core/prism/types/: __init__.py  builtins.py  loader.py  schema.py  validator.py
prism-core/prism/vault/: __init__.py  context.py  registry.py  vault.py
prism-core/prism_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
prism-core/tests/: test_graph.py  test_loader.py  test_manager.py  test_metadata.py  test_path_resolver.py  test_query.py  test_repl.py  test_storage.py  test_tracking.py  test_tutor.py  test_types.py  test_vault.py
prism-tui/: pyproject.toml
prism-tui/prism_tui/: app.py  command_bar.py  command_mode.py  messages.py  startup_screen.py
prism-tui/prism_tui/tabs/: browser.py  graph.py  query_builder.py  tag_cloud.py
prism-tui/prism_tui/widgets/: completions.py  path_input.py
prism-tui/tests/: test___main__.py  test_app.py  test_browser.py  test_command_bar.py  test_command_dispatch.py  test_completions.py  test_graph.py  test_layout.py  test_messages.py  test_path_input.py  test_pilot.py  test_query_builder.py  test_startup_screen.py  test_tag_cloud.py  test_wizards.py
(+24 files in other folders)
