[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-cli"
version = "0.1.0"
description = "CLI tool for Prism PKM"
requires-python = ">=3.11"
dependencies = [
    "prism-core",
    "click>=8.1",
    "click-default-group>=1.2",
]

[project.scripts]
prism = "prism_cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "mypy>=1.7",
    "flake8>=7.0",
    "pylint>=3.0",
    "pyright>=1.1",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.flake8]
max-line-length = 100

[tool.pylint]
max-line-length = 100
disable = "C,R"

[tool.pyright]
extraPaths = ["../prism-core"]

[tool.bandit]
skips = ["B101"]
exclude_dirs = ["tests"]
