[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-core"
version = "0.1.0"
description = "Local-first, single-user PKM with content-addressed blob storage and typed node graph"
requires-python = ">=3.11"
dependencies = [
    "tomlkit>=0.12",
]

[project.optional-dependencies]
cli = [
    "click>=8.1",
    "click-default-group>=1.2",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "mypy>=1.7",
]

[tool.setuptools.packages.find]
include = ["prism*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
