[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-core"
version = "0.1.0"
description = "Local-first, single-user PKM with content-addressed blob storage and typed node graph"
requires-python = ">=3.11"
dependencies = [
    "tomlkit>=0.12",
]

[project.optional-dependencies]
cli = [
    "click>=8.1",
    "click-default-group>=1.2",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "mypy>=1.7",
    "flake8>=7.0",
    "pylint>=3.0",
    "pyright>=1.1",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[tool.setuptools.packages.find]
include = ["prism*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.flake8]
max-line-length = 100

[tool.pylint]
max-line-length = 100
disable = "C,R"

[tool.pyright]
extraPaths = [".", "../prism-cli"]

[tool.bandit]
skips = ["B101", "B110", "B112", "B404", "B603", "B607"]
exclude_dirs = ["tests"]

[tool.coverage.run]
source_pkg = ["prism"]
relative_files = true
