[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-tui"
version = "0.1.0"
description = "Textual-based TUI for Prism PKM"
requires-python = ">=3.11"
dependencies = [
    "prism-core",
    "textual>=1.0",
]

[project.scripts]
prism-tui = "prism_tui.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "mypy>=1.7",
    "flake8>=7.0",
]

[tool.setuptools.packages.find]
include = ["prism_tui*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.flake8]
max-line-length = 100

[tool.pylint]
max-line-length = 100
disable = "C,R"

[tool.pyright]
extraPaths = ["../prism-core"]

[tool.coverage.run]
source = ["prism_tui"]
relative_files = true
